# tapes

./: .clang-format  CMakeLists.txt  README.md  \
include/: tape.hpp  tape_sorter.hpp
src/: main.cpp  tape.cpp  tape_sorter.cpp
tests/: CMakeLists.txt  tests.cpp
tests/tests_data/: created_tape.tp  first_tape.tp  sorted.txt  sorted2.tp  sorted2.txt  sorted3.txt  text_for_create.txt  text_for_create_copy.txt  unsorted.tp  unsorted.txt  unsorted2.tp  unsorted2.txt  unsorted3.tp
tmp/: temp_tape1.tp
